--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -7,3 +7,5 @@
 .top-title{margin-top: 25px;}
 .canvas-50{width: 50%;}
 .offcanvas-body{background: #f8f8fb;}
+.iti {width: 100%;}
+.error-input-feedback{width:100%;margin-top:0.25rem;font-size:80%;color:#f46a6a;}
